--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <iframe src="menu.html" frameborder="0" width="100%" height="60px" style="position: sticky; top: 0; z-index: 1000;"></iframe>
+    <iframe src="./menu/" frameborder="0" width="100%" height="60px" style="position: sticky; top: 0; z-index: 1000;"></iframe>
 
     <main>
         <h1>Bem-vindo à Wiki!</h1>
