--- a/menu/index.html
+++ b/menu/index.html
@@ -48,8 +48,8 @@
 <body>
     <nav>
         <a href="index.html" target="_top">Página Principal</a>
-        <a href="recent_changes.html" target="_top">Mudanças Recentes</a>
-        <a href="random_page.html" target="_top">Página Aleatória</a>
+        <a href="../recent_changes/" target="_top">Mudanças Recentes</a>
+        <a href="../random_page/" target="_top">Página Aleatória</a>
         <div class="user-info">
             <span id="userName">Visitante</span>
             <button id="googleSignInBtn">Login com Google</button>
