--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <span class="mdl-layout-title">Menu</span>
             <nav class="mdl-navigation" id="main-navigation">
                 <a class="mdl-navigation__link" href="#" data-page-src="recepcao.html" data-requires-auth="false">Página Inicio</a>
+                <a class="mdl-navigation__link" href="#" data-page-src="adicionarartigo.html" data-requires-auth="false">Novo Artigo</a>
 
 
                 <a class="mdl-navigation__link" href="http://www.wzzm.org/POL%C3%8DTICAS%20GERAIS%20DO%20WIKI%20ZONE%20ZERO%20MOD.pdf" target="_blank">Políticas da WZZM</a>
