--- a/recepcao.html
+++ b/recepcao.html
@@ -6,61 +6,25 @@
     <title>Fórum Wiki Zone</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
-</head>
+    </head>
 <body>
     <script>
-        // Configuração Firebase
-        const firebaseConfig = {
-            apiKey: "sua-api-key",
-            authDomain: "seu-auth-domain",
-            projectId: "seu-project-id",
-            storageBucket: "seu-storage-bucket",
-            messagingSenderId: "seu-sender-id",
-            appId: "seu-app-id",
-            measurementId: "seu-measurement-id"
-        };
-
-        if (!firebase.apps.length) {
-            firebase.initializeApp(firebaseConfig);
-        }
-
-        const auth = firebase.auth();
-        const firestore = firebase.firestore();
-
-        // Função para fazer login com Google
-        function googleLogin() {
-            const provider = new firebase.auth.GoogleAuthProvider();
-            auth.signInWithPopup(provider).then(result => {
-                // O UID do usuário logado
-                const user = result.user;
-                console.log("Usuário logado:", user.displayName);
-                console.log("UID do usuário:", user.uid);
-
-                // Redirecionar para o fórum após o login
-                window.location.href = 'forum.html'; // Altere para a página do fórum
-            }).catch(error => {
-                console.error("Erro no login com Google:", error);
-            });
-        }
-
-        // Função para verificar se o usuário está logado
-        function checkUserStatus() {
-            const user = auth.currentUser;
-            if (user) {
-                // Exibir o conteúdo do fórum
-                loadForumContent(user.uid); // Passa o UID do usuário autenticado
-            } else {
-                // Usuário não logado, redireciona para o login
-                alert("Você precisa estar logado para acessar o fórum!");
-                window.location.href = 'login.html'; // Página de login
-            }
+        // Função para obter o UID da URL
+        function getUidFromUrl() {
+            const params = new URLSearchParams(window.location.search);
+            return params.get('uid');
         }
 
         // Função para carregar os tópicos do fórum
-        function loadForumContent(uid) {
+        function loadForumContent() {
+            const uid = getUidFromUrl(); // Obtém o UID da URL
+            if (!uid) {
+                // Se não houver UID, significa que o usuário não está logado ou houve um erro
+                const forumContainer = document.getElementById('forum-content');
+                forumContainer.innerHTML = '<p>Você precisa estar logado para ver o fórum.</p>';
+                return;
+            }
+
             fetch('https://api.exemplo.com/forum', {
                 method: 'GET',
                 headers: {
@@ -72,13 +36,21 @@
             .then(data => {
                 displayForum(data, uid); // Passando o UID para associar com os tópicos
             })
-            .catch(error => console.error('Erro ao carregar os tópicos do fórum:', error));
+            .catch(error => {
+                console.error('Erro ao carregar os tópicos do fórum:', error);
+                const forumContainer = document.getElementById('forum-content');
+                forumContainer.innerHTML = '<p>Erro ao carregar o fórum. Tente novamente mais tarde.</p>';
+            });
         }
 
         // Função para exibir os tópicos do fórum
         function displayForum(data, uid) {
             const forumContainer = document.getElementById('forum-content');
             forumContainer.innerHTML = ''; // Limpar conteúdo existente
+            if (!data || !data.topics || data.topics.length === 0) {
+                forumContainer.innerHTML = '<p>Nenhum tópico encontrado no fórum.</p>';
+                return;
+            }
             data.topics.forEach(topic => {
                 const topicElement = document.createElement('div');
                 topicElement.classList.add('forum-topic');
@@ -105,18 +77,14 @@
             // Implemente a lógica de edição aqui
         }
 
-        // Chama a função para verificar o status do usuário ao carregar a página
+        // Chama a função para carregar o conteúdo do fórum ao carregar a página
         window.onload = function() {
-            checkUserStatus();
+            loadForumContent();
         };
     </script>
 
-    <!-- Conteúdo da página -->
     <div id="forum-content" class="page-content">
-        <!-- Os tópicos do fórum serão carregados aqui -->
-    </div>
+        </div>
 
-    <!-- Botão de login Google -->
-    <button onclick="googleLogin()">Login com Google</button>
-</body>
+    </body>
 </html>
